third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_field_invalid.exp

Diagnostics:
error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_local_field_invalid.move:20:9
   │
18 │         let f = &mut v.f;
   │                      - other mutable local borrow
19 │         let s = &v;
   │                 -- local borrow attempted here
20 │         *s;
   │         ^^ reference used here
